# QT_Lab1

./: CMakeLists.txt
qt1/: CMakeLists.txt  card.h  lhs_widget.cpp  lhs_widget.h  main.cpp  main_window.cpp  main_window.h  randomizer.cpp  randomizer.h
qt2/: CMakeLists.txt  equation.h  main.cpp  main_window.cpp  main_window.h  readme.txt
